Fix picker overlapping

--- a/packages/@adobe/spectrum-css-temp/components/dropdown/index.css
+++ b/packages/@adobe/spectrum-css-temp/components/dropdown/index.css
@@ -27,9 +27,6 @@ governing permissions and limitations under the License.
   inline-size: var(--spectrum-dropdown-width);
   min-inline-size: var(--spectrum-dropdown-min-width);
 
-  /* Ensure that changing the selected item doesn't affect the size of the dropdown and its parents */
-  contain: size;
-
   /* Hack to enable select-powered Dropdowns */
   select {
     appearance: none;
@@ -58,6 +55,9 @@ governing permissions and limitations under the License.
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  /* Ensure that changing the selected item doesn't affect the size of the dropdown and its parents */
+  contain: size;
 }
 
 .spectrum-Dropdown-label {
@@ -130,6 +130,10 @@ governing permissions and limitations under the License.
 .spectrum-Dropdown--quiet {
   inline-size: auto;
   min-inline-size: var(--spectrum-dropdown-quiet-min-width);
+
+  .spectrum-Dropdown-trigger {
+    contain: none;
+  }
 }
 
 .spectrum-Dropdown-popover--quiet {
